# Tagbum

./: .gitignore  README.md  environment.yml  pyproject.toml  tagbum.config.example.json
Tagbum/: cli.py  config.py  db.py  duplicates.py  importer.py  main.py  media.py  models.py
Tagbum/static/: app.css  app.js
Tagbum/static/css/: base.css  home.css  map.css  preview.css  responsive.css  settings.css  tagger.css  tools.css
Tagbum/static/js/core/: shared.js
Tagbum/static/js/features/: date-strip.js  preview.js  tag-graph.js  tags.js
Tagbum/static/js/pages/: filter.js  home.js  map.js  settings.js  tagger.js  tools.js
Tagbum/templates/: _card.html  _pager.html  base.html  filter.html  index.html  map.html  settings.html  tag.html  tools.html  tools_index.html
Tagbum/web/: common.py  constants.py  state.py
Tagbum/web/routes/: api.py  pages.py  settings.py  tools.py
Tagbum/web/services/: duplicates.py  gallery.py  media.py  settings.py  tag_graph.py
Tagbum/web/tasks/: album_scan.py  duplicate_scan.py
docs/: README.md  architecture.md  backend.md  flows.md  frontend.md  structure.md
docs/modules/: vertical_timeline.md
scripts/: start_tagbum.ps1
