[project]
name = "tagbum"
version = "0.1.0"
description = "Local photo album indexer with resource grouping, previews, and tags."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2",
    "click>=8.1",
    "fastapi>=0.111",
    "jinja2>=3.1",
    "pillow>=10.3",
    "pillow-heif>=0.16",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "tqdm>=4.66",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
tagbum = "Tagbum.cli:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["Tagbum*"]
